# aiimooc

./: .gitignore  README.md
chapter2/: CMakeLists.txt  package.xml
chapter2.1/: CMakeLists.txt  bev_image.py  package.xml
chapter2.1/cfg/: Camera.cfg
chapter2.1/src/: eigen_caculator.cpp  eigen_caculator.h  pcl_to_range.cpp  point_cloud_range_image_convertor.cpp  point_cloud_range_image_convertor.h
chapter2.2/: bev_image.py
chapter2/cfg/: Camera.cfg
chapter2/include/: point_cloud_range_image_convertor.h
chapter2/problem1/zhenyusha_aiimooc_chapter2_problem1/: CMakeLists.txt  package.xml
chapter2/problem1/zhenyusha_aiimooc_chapter2_problem1/src/: main.cpp
chapter2/src/: eigen_caculator.cpp  eigenfeature.cpp  pcl_to_range.cpp  point_cloud_range_image_convertor.cpp  point_cloud_range_image_convertor.h
chapter3/: CMakeLists.txt  transform_szy.cpp  transform_szy.txt
chapter4/: CMakeLists.txt  seg_cluster.cpp
chapter5/: CMakeList.txt  CMakeLists.txt  aligner.cpp  aligner.h  main.cpp  ndt_aligner.cpp  ndt_aligner.h  pair_icp_aligner.cpp  pair_icp_aligner.h
chapter6/: CMakeLists.txt  main.cpp
chapter9/: DGCNN.ipynb
charter1/: sync_msg.py
charter2/: CMakeLists.txt  package.xml
pcl_demo/Features/: CMakeLists.txt  Globally_Aligned_Spatial_Distribution.cpp  PFH_features.cpp  bounding_boxes_fea.cpp  fasterPFH_features.cpp  narf_feature.cpp  normal_3d_feature.cpp  normal_estimation_using_integral_images.cpp  rOPSEstimation.cpp  vFH_Feature.cpp
pcl_demo/Filtering/: CMakeLists.txt  extract_indices.cpp
pcl_demo/Keypoints/: harris3d_keypoint_extraction.cpp  narf_keypoint_extraction.cpp
pcl_demo/Keypoints/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  harris3d  narf_kp_extr
pcl_demo/Registration/: CMakeLists.txt  iterative_closest_point.cpp  normal_distributions_transform.cpp  pairwise_incremental_registration.cpp
pcl_demo/Searching/: CMakeLists.txt
pcl_demo/Segmentation/: CMakeLists.txt  clusters_segmentation.cpp  color_based_region_growing_segmentation.cpp  cylinder_segmentation.cpp  planar_segmentation.cpp  random_sample_consensus.cpp
